set min-width/height for thumbnail to avoid content shift on load

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -834,6 +834,8 @@ div.anchor {
   box-shadow: 5px 5px 5px #666;
   -moz-box-shadow: 5px 5px 5px #666;
   -webkit-box-shadow: 5px 5px 5px #666;
+  min-width: 220px;
+  min-height: 168px;
 }
 
 .comt-dataset dd > ul {
